--- a/document/template.qmd
+++ b/document/template.qmd
@@ -10,39 +10,13 @@ format:
     toc-depth: 3
     toc-location: left
     embed-resources: true
+    format-links: false
     theme:
       - cosmo
       - infosci-document.scss
     code-fold: false
     mermaid:
       theme: neutral
-  docx:
-    toc: true
-    toc-depth: 3
-    number-sections: true
-    highlight-style: github
-  pdf:
-    toc: true
-    toc-depth: 3
-    number-sections: true
-    colorlinks: true
-    linkcolor: "0C234B"
-    urlcolor: "AB0520"
-    documentclass: article
-    geometry:
-      - left=1in
-      - right=2.5in
-      - top=1in
-      - bottom=1in
-      - marginparwidth=1.75in
-      - marginparsep=0.25in
-    include-in-header:
-      text: |
-        \usepackage{fancyhdr}
-        \pagestyle{fancy}
-        \fancyhead[L]{\small\leftmark}
-        \fancyhead[R]{\small University of Arizona}
-        \fancyfoot[C]{\thepage}
 
 execute:
   echo: true
